--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
            <h2>Hola, soy Luciano</h2>
            <h1>Diseñador y desarrollador Web</h1>
            <div class="redes">
-            <a href="#"><img src="./icons/linkedin.svg" alt=""></a>
-            <a href="#"><img src="./icons/instagram.svg" alt=""></i></a>
-            <a href="#"><img src="./icons/twitter.svg" alt=""></i></a>
+            <a href="#"><img src="./linkedin.svg" alt=""></a>
+            <a href="#"><img src="./instagram.svg" alt=""></i></a>
+            <a href="#"><img src="./twitter.svg" alt=""></i></a>
            </div>
         </div>
     </section>
@@ -63,20 +63,20 @@
                 <h2 class="titulo-seccion">Mis habilidades</h2>
                 <div class="fila">
                     <div class="habilidades">
-                        <span class="icono"><img src="./icons/mobile.svg" alt=""></span>
+                        <span class="icono"><img src="./mobile.svg" alt=""></span>
                         <h5>Mobile app desing</h5>
                     </div>
                     <div class="habilidades">
-                        <span class="icono"><img src="./icons/motion.svg" alt=""></span>
+                        <span class="icono"><img src="./motion.svg" alt=""></span>
                         <h5>Motion Desing</h5>
                     </div>
                     
                     <div class="habilidades">
-                        <span class="icono"><img src="./icons/material.svg" alt=""></span>
+                        <span class="icono"><img src="./material.svg" alt=""></span>
                         <h5>Creación de sistemas de diseño</h5>
                     </div>
                     <div class="habilidades">
-                        <span class="icono"><img src="./icons/web.svg" alt=""></span>
+                        <span class="icono"><img src="./web.svg" alt=""></span>
                         <h5>Desarrollo web</h5> 
                     </div>   
                     
@@ -127,21 +127,21 @@
         <h2>Portafolio</h2>
         <div class="galeria">
             <div class="proyecto">
-                <img  src="./images/ejemplo 1.png" alt="">
+                <img  src="./ejemplo 1.png" alt="">
                 <div class="overlay">
                   <h3>Diseño creativo</h3> 
                   <p>Fotografía</p> 
                 </div>
             </div> 
             <div class="proyecto">
-                <img  src="./images/ejemplo 2.png" alt="">
+                <img  src="./ejemplo 2.png" alt="">
                 <div class="overlay">
                   <h3>Diseño creativo</h3> 
                   <p>Fotografía</p> 
                 </div>
             </div> 
             <div class="proyecto">
-                <img  src="./images/ejemplo 3.png" alt="">
+                <img  src="./ejemplo 3.png" alt="">
                 <div class="overlay">
                   <h3>Diseño creativo</h3> 
                   <p>Fotografía</p> 
@@ -157,12 +157,12 @@
     <h2 class="titulo-seccion">Contacto</h2>
     <div class="fila">
         <div class="contacto-data">
-            <span class="icono"><img src="./icons/phone.svg" alt=""></span>
+            <span class="icono"><img src="./phone.svg" alt=""></span>
             <h4>Número celular</h4>
             <h4>+543874527977</h4>
         </div>
         <div class="contacto-data">
-            <span class="icono"><img src="./icons/mail 1.svg" alt=""></span>
+            <span class="icono"><img src="./mail 1.svg" alt=""></span>
             <h4>Email</h4>
             <h4>example@correo.com</h4>
         </div>
