--- a/index.html
+++ b/index.html
@@ -13,28 +13,21 @@
 </head>
 <body>
     <!-- /* MENÚ ENCABEZADO */ -->
-    <header class="contenedor-header"> 
-                <nav id="nav" class="main-nav">
-                    <ul class="main-menu" id="main-menu">
-                        <li class="main-menu__item"><a class="main-menu__link" href="#home" onclick="seleccionar()">Home</a>
-                        </li>
-                        <li class="main-menu__item"><a class="main-menu__link" href="#acerca-de-mi"
-                                onclick="seleccionar()">Acerca de mí</a></li>
-                        <li class="main-menu__item"><a class="main-menu__link" href="#mis-habilidades"
-                                onclick="seleccionar()">Mis Habilidades</a></li>
-                        <li class="main-menu__item"><a class="main-menu__link" href="#experiencia"
-                                onclick="seleccionar()">Experiencia</a></li>
-                        <li class="main-menu__item"><a class="main-menu__link" href="#portfolio"
-                                onclick="seleccionar()">Portafolio</a></li>
-                        <li class="main-menu__item"><a class="main-menu__link" href="#contacto"
-                                onclick="seleccionar()">Contacto</a></li>
-                    </ul>
-                </nav>
-                 <div class="nav-responsive"  ><!--{onclick="mostrarOcultarMenu()"}  -->
-                    <i class="fa-solid fa-bars"></i>
-                </div>
-            
-        
+    <header class="contenedor-header">
+        <nav id="nav" class="main-nav">
+            <ul class="main-menu" id="main-menu">
+                <li class="main-menu__item"><a class="main-menu__link" href="#home">Home</a>
+                </li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#acerca-de-mi">Acerca de mí</a></li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#mis-habilidades">Mis Habilidades</a></li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#experiencia">Experiencia</a></li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#portfolio">Portafolio</a></li>
+                <li class="main-menu__item"><a class="main-menu__link" href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+        <div class="nav-responsive">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </header>
 
     <!-- /* SECCIÓN HOME */ -->
