--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style> @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap'); </style>
     <link rel="stylesheet" href="./style.css">
       
-    <title>Portfolio</title>
+    <title>Portfolio - Luciano Tito</title>
 </head>
 <body>
     <!-- /* MENÚ ENCABEZADO */ -->
