testing profile img

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="home" class="home">
         <!-- <div class="contenido-banner"> -->
            <div class="contenedor-img">
-            <img class="img-desing" src="./photo_2023-01-06_23-4430-34-modified.jpeg" alt="">
+            <img class="img-desing" src="/src/images/CV-HD-img.jpg" alt="">
            </div> 
            
            <h2>Hola, soy Luciano</h2>
