Conctack and link changes

--- a/index.html
+++ b/index.html
@@ -208,24 +208,29 @@
   </section>
   
 
-  <!-- /*CONTACTO */ -->
+ <!-- CONTACTO -->
 
-  <section id="contacto" class="contacto">
+<section id="contacto" class="contacto">
     <h2 class="titulo-seccion">Contacto</h2>
     <div class="fila__contact">
-        <div class="contacto-data">
-            <span class="icono"><img src="./phone.svg" alt=""></span>
-            <h4>Número celular</h4>
-            <a href="https://wa.me/qr/SVQ64MLTBOB7D1" target="_blank">+543874527977</a>
-        </div>
-        <div class="contacto-data">
-            <span class="icono"><img src="./mail 1.svg" alt=""></span>
-            <h4>Email</h4> 
-            <a href="mailto:lucianoelxeneixe@gmail.com" target="_blank">lucianotitocedron@gmail.com</a>
-        </div>
-    </section>
+      <div class="contacto-data" onclick="redirectToWhatsapp()">
+        <span class="icono"><img src="./phone.svg" alt=""></span>
+        <h4>Número celular</h4>
+        <a href="https://wa.me/543874527977" target="_blank">+543874527977</a>
+      </div>
+      <div class="contacto-data" onclick="redirectToEmail()">
+        <span class="icono"><img src="./mail 1.svg" alt=""></span>
+        <h4>Email</h4>
+        <a href="mailto:lucianotitocedron@gmail.com" target="_blank">lucianotitocedron@gmail.com</a>
+      </div>
+    </div>
+  </section>
+  
         
-<footer>  <h5>Hecho con <i class="fa-solid fa-heart"></i> en Academlo</h5></footer>
+  <footer>
+    <h5 onclick="scrollToTop()">Subir <i class='bx bxs-up-arrow-circle'></i></h5>
+  </footer>
+  
 
   
          <a class= "link__git" href="https://github.com/LucianoTito/Portafolio-7" target="blank">LINK DEL CÓDIGO</a>
