dark and white mode commit

--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
     <header class="contenedor-header">
         <nav id="nav" class="main-nav">
             <ul class="main-menu" id="main-menu">
-                <li class="main-menu__item"><a class="main-menu__link" href="#home">Home</a>
-                </li>
-                <li class="main-menu__item"><a class="main-menu__link" href="#acerca-de-mi">Acerca de mí</a></li>
-                <li class="main-menu__item"><a class="main-menu__link" href="#mis-habilidades">Mis Habilidades</a></li>
-                <li class="main-menu__item"><a class="main-menu__link" href="#experiencia">Experiencia</a></li>
-                <li class="main-menu__item"><a class="main-menu__link" href="#portfolio">Portafolio</a></li>
-                <li class="main-menu__item"><a class="main-menu__link" href="#contacto">Contacto</a></li>
+              <li class="main-menu__item"><a class="main-menu__link" href="#home">Home</a></li>
+              <li class="main-menu__item"><a class="main-menu__link" href="#acerca-de-mi">Acerca de mí</a></li>
+              <li class="main-menu__item"><a class="main-menu__link" href="#mis-habilidades">Mis Habilidades</a></li>      
+              <!-- <li class="main-menu__item"><a class="main-menu__link" href="#experiencia">Experiencia</a></li> -->
+              <li class="main-menu__item"><a class="main-menu__link" href="#portfolio">Portafolio</a></li>
+              <li class="main-menu__item"><a class="main-menu__link" href="#contacto">Contacto</a></li>
+              <button id="button__dark-mode">
+                <i class="dark-mode-icon bx bx-moon"></i>
+                <i class="light-mode-icon bx bx-sun"></i>
+              </button>
             </ul>
-        </nav>
+            
+          </nav>
+          
         <div class="nav-responsive">
             <i class="fa-solid fa-bars"></i>
         </div>
