--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="flags__item" data-language="es">
                         <img src="/src/icons/es-flag.svg" alt="spain flag">
                     </div>
-                    <div class="flags__item" data-language="es">
+                    <div class="flags__item" data-language="en">
                         <img src="/src/icons/us-flag.svg" alt="USA flag">
                     </div>
                 </div>
@@ -53,7 +53,7 @@
            </div> 
            
            <h2>Luciano Tito Cedrón</h2>
-           <h1 class="profesion" data-section="homes" data-value="profesion">Desarrollador Web Full Stack</h1>
+           <h1 data-section="homes" data-value="profesion">Desarrollador Web Full Stack</h1>
            <div class="redes">
             
             <a href="https://www.linkedin.com/in/luciano-facundo-tito-cedr%C3%B3n-093041261/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
@@ -66,7 +66,7 @@
     <!-- /* ACERCA DE MÍ */ -->
 <section id="acerca-de-mi" class="acerca-de-mi">
     <div class="contenido-seccion">
-        <h2 class="acerca-de-mi__title" data-section="acerca-de-mi" data-value="acerca-de-mi__title">Acerca de mí</h2>
+        <h2 data-section="acerca-de-mi" data-value="acerca-de-mi__title">Acerca de mí</h2>
         <p data-section="acerca-de-mi" data-value="description" class="description">
     Tengo 30 años, he trabajado en proyectos en los que he aplicado mis conocimientos para desarrollar interfaces de usuario
     atractivas y receptivas utilizando HTML, CSS y JavaScript. Además, estoy familiarizado con el uso de bibliotecas y
