--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
     <h2 class="titulo-seccion" data-section="contacto" data-value="titulo-seccion">Contacto</h2>
     <div class="fila__contact">
       <div class="contacto-data" onclick="redirectToWhatsapp()">
-        <span class="icono"><img src="./phone.svg" alt=""></span>
+        <span class="icono"><img src="/src/icons/phone.svg" alt="phone_img"></span>
         <h4 class="contact-number" data-section="contacto" data-value="contact-number">Número celular</h4>
         <a href="https://wa.me/543874527977" target="_blank">+543874527977</a>
       </div>
       <div class="contacto-data" onclick="redirectToEmail()">
-        <span class="icono"><img src="./mail 1.svg" alt=""></span>
+        <span class="icono"><img src="/src/icons/mail 1.svg" alt=""></span>
         <h4>Email</h4>
         <a href="mailto:lucianotitocedron@gmail.com" target="_blank">lucianotitocedron@gmail.com</a>
       </div>
