--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
     
   </footer>
   
-  <div  class= "link__git">
-    <a href="https://github.com/LucianoTito/Portafolio-7" target="blank" data-section="footer" data-value="link__git">LINK DEL CÓDIGO  <i class='bx bxl-github icon'></i> </a>
-  </div>
+  
+    <a class= "link__git" href="https://github.com/LucianoTito/Portafolio-7" target="blank" data-section="footer" data-value="link__git">LINK DEL CÓDIGO  <i class='bx bxl-github icon'></i> </a>
+  
   
 
      <script src="./script.js"></script>       
