--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     
 
 
-    <h5  data-section="footer" data-value="footer-up" onclick="scrollToTop()">Subir <button class="arrow_btn" title="arrow__btn"><i class='bx bxs-up-arrow-circle'></i></button> </h5>
+    <h5  data-section="footer" data-value="footer-up" onclick="scrollToTop()">Subir</h5> <button class="arrow_btn" title="arrow__btn"><i class='bx bxs-up-arrow-circle'></i></button> 
     
   </footer>
   
