--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <title>Portfolio - Luciano Tito</title>
 </head>
 <body>
+  
+
+ 
     <!-- /* MENÚ ENCABEZADO */ -->
-    <header class="contenedor-header">
+    <header class="contenedor-header">      
+      <div class="space space-1"></div>
+      <div class="space space-2"></div>
+      <div class="space space-3"></div> 
         <nav id="nav" class="main-nav">
             <ul class="main-menu" id="main-menu">
               <li class="main-menu__item"><a class="main-menu__link" href="#home" data-section="main-menu" data-value="home">Home</a></li>
