--- a/index.html
+++ b/index.html
@@ -183,21 +183,21 @@
           </div>
         </a>
         <a href="https://rickandmorty-app-luciano-tito.netlify.app" target="_blank" class="proyecto">
-          <img src="/src/images/rick&morty.png" alt="">
+          <img src="/src/images/rick&morty.png" alt="imagen ilustrativa de la página.">
           <div class="overlay">
             <h3>Rick & Morty</h3>
             <p>React Vite</p>
           </div>
         </a>
-        <a href="https://e-commerce-luciano-tito.netlify.app" target="_blank" class="proyecto">
-          <img src="/src/images/ecommerce.png" alt="">
+        <a href="https://crossfitconverter.netlify.app/" target="_blank" class="proyecto">
+          <img src="/src/images/cf_converter.png" alt="imagen ilustrativa de la página.">
           <div class="overlay">
-            <h3>E-commerce</h3>
+            <h3>Conversor de Crossfit</h3>
             <p>React Vite</p>
           </div>
         </a>
         <a href="https://weatherapp-luciano-tito.netlify.app" target="_blank" class="proyecto">
-          <img src="/src/images/weatherapp.png" alt="">
+          <img src="/src/images/weatherapp.png" alt="imagen ilustrativa de la página.">   ">
           <div class="overlay">
             <h3 class="weather-app" data-section="portafolio" data-value="weather-app">Clima App</h3>
             <p>React Vite</p>
@@ -210,10 +210,10 @@
             <p>HTML, CSS & JavaScript</p>
           </div>
         </a>
-        <a href="https://random-phrases-luciano-tito-cedron.netlify.app" target="_blank" class="proyecto">
-          <img src="/src/images/randomPhrases.png" alt="">
+        <a href="https://tiendapowergripsalta.netlify.app/" target="_blank" class="proyecto">
+          <img src="/src/images/pwr_grip.png" alt="imagen ilustrativa de la página.">
           <div class="overlay">
-            <h3 class="random_phrases" data-section="portafolio" data-value="random_phrases">Frases Aleatorias</h3>
+            <h3 class="random_phrases" data-section="portafolio" data-value="random_phrases">Página de ventas</h3>
             <p>React Vite</p>
           </div>
         </a>
